# chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: Board.h  CMakeCache.txt  Calc.cpp  Config.h  helpers.h  main.cpp  temp.cpp
src/board/: Board.h  Piece.h
